--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "server": "node backend/server.js"
   },
   "private": true,
   "dependencies": {
@@ -19,7 +16,9 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "express": "^4.17.1",
     "rxjs": "~6.6.0",
+    "socket.io": "^3.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
