--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@angular/platform-browser": "~11.0.0",
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
+    "chance": "^1.1.7",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
+    "simple-peer": "^9.9.3",
     "socket.io": "^3.0.3",
+    "socket.io-client": "^3.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
