--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "server": "nodemon backend/server.js"
+    "server_": "nodemon backend/main.js",
+    "server": "nodemon backend/server.js",
+    "build": "tsc -w --project tsconfig.backend.json"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "~11.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
+    "@types/ws": "5.1.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
