--- a/tsconfig.backend.json
+++ b/tsconfig.backend.json
@@ -2,6 +2,7 @@
   "compileOnSave": true,
   "files": ["backend/main.ts"],
   "compilerOptions": {
-    "target": "ES2015"
+    "target": "ES2015",
+    "moduleResolution": "Node"
   }
 }
