--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "can-u-hear-me",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod"
+    "start": "node server",
+    "serve": "ng serve",
+    "build": "ng build --prod",
+    "post-build": "cp backend/index.js dist/can-u-hear-me/ && cp backend/package.json dist/can-u-hear-me/"
   },
   "private": true,
   "dependencies": {
